syntax = "proto3";

package parthrs.go_rpc;

option go_package = "github.com/parthrs/go-rpc";

import "memory.proto";

message CPU {
  //Brand of the CPU
  string brand = 1;
  /*
   * Name of the CPU
   */
  string name = 2;
  uint32 num_cores = 3;
  uint32 num_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}

message GPU {
  string brand = 1;
  string name = 2;
  string min_ghz = 3;
  string max_ghz = 4;
  Memory memory = 5;
}